Modification structure + New API

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_Store
 academie_francaise/tools/brouillon.py
 serv_api_academie_francaise/node_modules/
+serv_api_academie_francaise/routesNEW-HS.js
