--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 academie_francaise/tools/brouillon.py
 serv_api_academie_francaise/node_modules/
 serv_api_academie_francaise/routesNEW-HS.js
+node_modules/
