--- a/serv_api_academie_francaise/package.json
+++ b/serv_api_academie_francaise/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "seedrandom": "^3.0.5"
   }
 }
